[gd_scene load_steps=11 format=3 uid="uid://bhloq1sge1ium"]

[ext_resource type="Texture2D" uid="uid://dg36c6xegv74w" path="res://sprites/t_pose.png" id="1_vtgdb"]
[ext_resource type="Script" path="res://scripts/minigame_3/minigame_3.gd" id="1_yi68e"]
[ext_resource type="Texture2D" uid="uid://dgfnkkhcb5aqh" path="res://sprites/groucho_glasses.png" id="2_gauvy"]
[ext_resource type="Texture2D" uid="uid://c12i82vsgwofh" path="res://sprites/safety_goggles.png" id="3_kmwjn"]
[ext_resource type="Texture2D" uid="uid://c2hxwdmga3yrx" path="res://sprites/shirt.png" id="4_aq3ky"]
[ext_resource type="Script" path="res://scripts/minigame_3/draggable_sprite.gd" id="4_tekjw"]
[ext_resource type="Texture2D" uid="uid://pxuvcrrlk4e5" path="res://sprites/shoes.png" id="5_wklhk"]
[ext_resource type="Texture2D" uid="uid://cs0je3ho6vvvq" path="res://sprites/underwear.png" id="7_s42b0"]
[ext_resource type="FontFile" uid="uid://bvw5nemfgqfxq" path="res://CG pixel 4x5.ttf" id="9_m3w5j"]

[sub_resource type="LabelSettings" id="LabelSettings_dgo4x"]
font = ExtResource("9_m3w5j")
font_size = 5

[node name="Minigame3" type="Node2D"]
script = ExtResource("1_yi68e")
metadata/_edit_lock_ = true

[node name="TPose" type="Sprite2D" parent="."]
position = Vector2(168, 84)
texture = ExtResource("1_vtgdb")

[node name="Area2D" type="Area2D" parent="TPose"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TPose/Area2D"]
polygon = PackedVector2Array(2, -28, 4, -28, 4, -27, 5, -27, 5, -26, 6, -26, 6, -25, 7, -25, 7, -24, 8, -24, 8, -23, 9, -23, 9, -21, 10, -21, 10, -17, 9, -17, 9, -15, 8, -15, 8, -14, 7, -14, 7, -13, 6, -13, 6, -12, 5, -12, 5, -11, 6, -11, 6, -10, 7, -10, 7, -9, 24, -9, 24, -8, 25, -8, 25, -2, 24, -2, 24, -1, 10, -1, 10, 16, 9, 16, 9, 17, 8, 17, 8, 27, 7, 27, 7, 28, 6, 28, 6, 29, 1, 29, 1, 28, -1, 28, -1, 29, -6, 29, -6, 28, -7, 28, -7, 27, -8, 27, -8, 17, -9, 17, -9, 16, -10, 16, -10, -1, -24, -1, -24, -2, -25, -2, -25, -8, -24, -8, -24, -9, -7, -9, -7, -10, -6, -10, -6, -11, -5, -11, -5, -12, -6, -12, -6, -13, -7, -13, -7, -14, -8, -14, -8, -15, -9, -15, -9, -17, -10, -17, -10, -21, -9, -21, -9, -23, -8, -23, -8, -24, -7, -24, -7, -25, -6, -25, -6, -26, -5, -26, -5, -27, -4, -27, -4, -28, -2, -28, -2, -29, 2, -29)

[node name="GrouchoGlasses" type="Sprite2D" parent="." groups=["Sprite2D"]]
position = Vector2(168, 66)
texture = ExtResource("2_gauvy")
script = ExtResource("4_tekjw")

[node name="Area2D" type="Area2D" parent="GrouchoGlasses"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GrouchoGlasses/Area2D"]
polygon = PackedVector2Array(-2, -6, -1, -6, -1, -5, 1, -5, 1, -6, 2, -6, 2, -7, 6, -7, 6, -6, 7, -6, 7, -5, 8, -5, 8, -4, 7, -4, 7, -3, 8, -3, 8, 0, 7, 0, 7, 1, 6, 1, 6, 2, 5, 2, 5, 3, 3, 3, 3, 4, 4, 4, 4, 6, 3, 6, 3, 7, 2, 7, 2, 6, 1, 6, 1, 7, -1, 7, -1, 6, -2, 6, -2, 7, -3, 7, -3, 6, -4, 6, -4, 4, -3, 4, -3, 3, -5, 3, -5, 2, -6, 2, -6, 1, -7, 1, -7, 0, -8, 0, -8, -3, -7, -3, -7, -4, -8, -4, -8, -5, -7, -5, -7, -6, -6, -6, -6, -7, -2, -7)

[node name="SafetyGoggles" type="Sprite2D" parent="." groups=["Sprite2D"]]
z_index = 1
position = Vector2(168, 65)
texture = ExtResource("3_kmwjn")
script = ExtResource("4_tekjw")

[node name="Area2D" type="Area2D" parent="SafetyGoggles"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SafetyGoggles/Area2D"]
polygon = PackedVector2Array(7, -2.5, 8, -2.5, 8, 1.5, 7, 1.5, 7, 2.5, 6, 2.5, 6, 3.5, 1, 3.5, 1, 2.5, -1, 2.5, -1, 3.5, -6, 3.5, -6, 2.5, -7, 2.5, -7, 1.5, -8, 1.5, -8, -2.5, -7, -2.5, -7, -3.5, 7, -3.5)

[node name="Shirt" type="Sprite2D" parent="." groups=["Sprite2D"]]
z_index = 2
position = Vector2(168, 88)
texture = ExtResource("4_aq3ky")
script = ExtResource("4_tekjw")

[node name="Area2D" type="Area2D" parent="Shirt"]
metadata/_edit_lock_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Shirt/Area2D"]
polygon = PackedVector2Array(9, -13, 24, -13, 24, -12, 25, -12, 25, -6, 24, -6, 24, -5, 10, -5, 10, 12, 9, 12, 9, 13, 8, 13, 8, 14, -8, 14, -8, 13, -9, 13, -9, 12, -10, 12, -10, -5, -24, -5, -24, -6, -25, -6, -25, -12, -24, -12, -24, -13, -9, -13, -9, -14, 9, -14)

[node name="Shoes" type="Sprite2D" parent="." groups=["Sprite2D"]]
z_index = 3
position = Vector2(168, 108)
texture = ExtResource("5_wklhk")
script = ExtResource("4_tekjw")

[node name="Area2D" type="Area2D" parent="Shoes"]
metadata/_edit_lock_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Shoes/Area2D"]
polygon = PackedVector2Array(-1, -3.5, 1, -3.5, 1, -4.5, 8, -4.5, 8, 2.5, 7, 2.5, 7, 3.5, 6, 3.5, 6, 4.5, 1, 4.5, 1, 3.5, -1, 3.5, -1, 4.5, -6, 4.5, -6, 3.5, -7, 3.5, -7, 2.5, -8, 2.5, -8, -4.5, -1, -4.5)
metadata/_edit_lock_ = true

[node name="Underwear" type="Sprite2D" parent="." groups=["Sprite2D"]]
z_index = 4
position = Vector2(168, 88)
texture = ExtResource("7_s42b0")
script = ExtResource("4_tekjw")

[node name="Area2D" type="Area2D" parent="Underwear"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Underwear/Area2D"]
polygon = PackedVector2Array(7, -11, 8, -11, 8, -10, 9, -10, 9, -7, 8, -7, 8, -6, 7, -6, 7, -5, 3, -5, 3, -6, 2, -6, 2, -7, 1, -7, 1, -8, -1, -8, -1, -7, -2, -7, -2, -6, -3, -6, -3, -5, -7, -5, -7, -6, -8, -6, -8, -7, -9, -7, -9, -10, -8, -10, -8, -11, -7, -11, -7, -12, 7, -12)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Underwear/Area2D"]
polygon = PackedVector2Array(8, 4, 9, 4, 9, 7, 8, 7, 8, 8, 4, 8, 4, 9, 3, 9, 3, 11, 2, 11, 2, 12, -2, 12, -2, 11, -3, 11, -3, 9, -4, 9, -4, 8, -8, 8, -8, 7, -9, 7, -9, 4, -8, 4, -8, 3, 8, 3)

[node name="EyePos" type="Node2D" parent="."]
position = Vector2(168, 65)

[node name="ShirtPos" type="Node2D" parent="."]
position = Vector2(168, 88)

[node name="FeetPos" type="Node2D" parent="."]
position = Vector2(168, 108)

[node name="OneSecondTimer" type="Timer" parent="."]
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="TimerLabel" type="Label" parent="."]
offset_right = 10.0
offset_bottom = 8.0
text = "10"
label_settings = SubResource("LabelSettings_dgo4x")
autowrap_mode = 3

[node name="Label" type="Label" parent="."]
offset_left = 134.0
offset_top = 11.0
offset_right = 209.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 5
text = "Drag the appropriate clothing onto the character"
autowrap_mode = 3

[connection signal="area_entered" from="TPose/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="TPose/Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="mouse_entered" from="GrouchoGlasses/Area2D" to="GrouchoGlasses" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="GrouchoGlasses/Area2D" to="GrouchoGlasses" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="SafetyGoggles/Area2D" to="SafetyGoggles" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="SafetyGoggles/Area2D" to="SafetyGoggles" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Shirt/Area2D" to="Shirt" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Shirt/Area2D" to="Shirt" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Shoes/Area2D" to="Shoes" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Shoes/Area2D" to="Shoes" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Underwear/Area2D" to="Underwear" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Underwear/Area2D" to="Underwear" method="_on_mouse_exited"]
[connection signal="timeout" from="OneSecondTimer" to="." method="_on_one_second_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
